--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --watch 'src/' --exec \"ts-node src/index.ts\" -e ts",
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --exec \"ts-node ./index.ts\" -e ts",
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,8 @@
   "author": "Adson Macêdo, Thairam Michel, Ramon Rodrigues, Jardesson Elliudo",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/http-status-codes": "^1.2.0",
     "@types/module-alias": "^2.0.0",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
@@ -31,6 +33,11 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.7.5",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "http-status-code": "^2.1.0",
+    "http-status-codes": "^2.1.4",
     "module-alias": "^2.2.2"
   }
 }
