--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/express": "^4.17.11",
     "@types/http-status-codes": "^1.2.0",
     "@types/module-alias": "^2.0.0",
+    "@types/mongoose": "^5.10.4",
     "@types/node": "^14.14.37",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "eslint": "^6.8.0",
@@ -37,6 +38,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "mongoose": "^5.12.3"
   }
 }
