--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Adson Macêdo, Thairam Michel, Ramon Rodrigues, Jardesson Elliudo",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/http-status-codes": "^1.2.0",
     "@types/module-alias": "^2.0.0",
@@ -36,6 +37,7 @@
   "dependencies": {
     "@overnightjs/core": "^1.7.5",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
