--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node ./dist/index.js",
     "test": "nyc --clean --all --reporter=text-summary mocha test/**/*.spec.ts || exit 0",
     "test:unit": "nyc --clean --all --reporter=text-summary mocha test/unit/**/*.spec.ts || exit 0",
-    "test:integration": "nyc --clean --all --reporter=text-summary mocha test/integration/**/*.spec.ts"
+    "test:integration": "nyc --clean --all --reporter=text-summary mocha test/integration/**/*.spec.ts || exit 0"
   },
   "keywords": [
     "QuestsApp",
