--- a/package.json
+++ b/package.json
@@ -45,11 +45,15 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.5",
+    "@types/bcrypt": "^3.0.1",
+    "@types/jsonwebtoken": "^8.5.1",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.3"
   },
